--- a/Fuentes/AutoCorreccionJava_TFG/src/Locale/en_EN/default.po
+++ b/Fuentes/AutoCorreccionJava_TFG/src/Locale/en_EN/default.po
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2016-01-19 20:32+0100\n"
-"PO-Revision-Date: 2016-01-19 21:12+0100\n"
+"POT-Creation-Date: 2016-01-20 12:17+0100\n"
+"PO-Revision-Date: 2016-01-20 12:39+0100\n"
 "Language-Team: EMAIL@ADDRESS\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -17,19 +17,19 @@ msgstr ""
 
 #: Controller/AlumnosController.php:26
 msgid "Primer acceso, has sido registrado"
-msgstr "First access, have been registered."
+msgstr ""
 
-#: Controller/IntentosController.php:63 Controller/TestsController.php:35
+#: Controller/IntentosController.php:63 Controller/TestsController.php:36
 msgid "El fichero debe tener extensión .zip"
 msgstr "The file must have .zip extension"
 
 #: Controller/IntentosController.php:67
 msgid "La fecha límite de la entrega ha finalizado"
-msgstr "The closing date of delivery is complete"
+msgstr "Delivery deadline is over"
 
 #: Controller/IntentosController.php:70
 msgid "No puedes subir más veces la práctica"
-msgstr "You can't upload more practise times"
+msgstr "You can't upload more practice times"
 
 #: Controller/IntentosController.php:174
 msgid "El zip no contiene la estructura de carpetas correcta"
@@ -37,7 +37,7 @@ msgstr "The zip doesn't contains the correct folder structure"
 
 #: Controller/IntentosController.php:201
 msgid "La práctica tiene errores de compilación"
-msgstr "The practise has compilation errors"
+msgstr "The practice has compilation errors"
 
 #: Controller/IntentosController.php:278
 msgid "Hay bucles infinitos. Test no ejecutado."
@@ -45,11 +45,11 @@ msgstr "There are infinitie loops.  Test not run."
 
 #: Controller/IntentosController.php:293
 msgid "La práctica ha pasado los test"
-msgstr "The practise has passed the test"
+msgstr "The practice has passed the test"
 
 #: Controller/IntentosController.php:300
 msgid "La práctica no ha pasado los test"
-msgstr "The practise hasn't passed the test"
+msgstr "The practice hasn't passed the test"
 
 #: Controller/IntentosController.php:306
 msgid "error desconocido"
@@ -61,7 +61,7 @@ msgstr "Ascent practice. Attempt number made: {0}"
 
 #: Controller/ProfesoresController.php:30
 msgid "No ha sido posible registrar al profesor."
-msgstr "It has not been possible to register the task."
+msgstr "It has not been possible to register the teacher."
 
 #: Controller/ProfesoresController.php:168
 msgid "Debes de seleccionar una de las opciones"
@@ -87,28 +87,29 @@ msgstr "The task has been configured correctly"
 msgid "No ha sido posible registrar la tarea."
 msgstr "It has not been possible to register the task."
 
-#: Controller/TestsController.php:24
+#: Controller/TestsController.php:25
 msgid "Debes de rellenar el enunciado o subir un test"
-msgstr "You must fill up the statement or a test"
+msgstr "You must fill up the statement or upload a test"
 
-#: Controller/TestsController.php:32
+#: Controller/TestsController.php:33
 msgid "Enunciado guardado correctamente"
 msgstr "Statement saved successfully"
 
-#: Controller/TestsController.php:54
+#: Controller/TestsController.php:55
 msgid "Test subido correctamente"
 msgstr "Test successfully uploaded"
 
-#: Controller/TestsController.php:119
+#: Controller/TestsController.php:120
 msgid "No ha sido posible registrar el test"
-msgstr "It has not been possible to register the task."
+msgstr "It has not been possible to register the test."
 
 #: Template/Excepciones/mostrar_error_acceso_incorrecto_alumno.ctp:1
 msgid ""
 "Por motivos de seguridad, no está permitido que un Alumno acceda al panel "
 "del Profesor"
 msgstr ""
-"For security reasons, it is not permitted that a student access the teacher"
+"For security reasons, it is not permitted that a student access to the "
+"teacher panel"
 
 #: Template/Excepciones/mostrar_error_acceso_incorrecto_alumno.ctp:2
 msgid ""
@@ -128,16 +129,15 @@ msgid ""
 "Por motivos de seguridad, no está permitido que un Profesor acceda al panel "
 "del Alumno"
 msgstr ""
-"For security reasons, it is not permitted that a teacher go to the student "
-"panel"
+"For security reasons, it is not permitted that a teacher access to the "
+"student panel"
 
 #: Template/Excepciones/mostrar_error_acceso_incorrecto_profesor.ctp:2
 msgid ""
 "Para acceder a la aplicación correctamente, deberá de acceder únicamente al "
 "panel del Profesor."
 msgstr ""
-"To access the application correctly, you must only access panel of the "
-"professor."
+"To access the application correctly, you must only access to teacher panel."
 
 #: Template/Excepciones/mostrar_error_acceso_local.ctp:1
 msgid ""
@@ -164,25 +164,22 @@ msgstr ""
 
 #: Template/Intentos/subir_practica.ctp:16
 msgid "SUBIDA DE PRÁCTICAS"
-msgstr "SHIT"
+msgstr "UPLOAD PRACTICES"
 
 #: Template/Intentos/subir_practica.ctp:17
 msgid ""
 "Sube la práctica en un fichero .zip que contenga la estructura de carpetas "
-"correcta correspondiente al paquete.\n"
-"  \t Es decir: si el paquete es 'uni.ubu', la estructura de carpetas a subir "
-"sería: uni/ubu/nombrePractica.java.\n"
-"  \t Tras la subida se mostrarán los reportes y, si no lo estaban ya, las "
-"gráficas correspondientes."
+"correcta correspondiente al paquete. Es decir: si el paquete es 'uni.ubu', "
+"la estructura de carpetas a subir sería: uni/ubu/nombrePractica.java. Tras "
+"la subida se mostrarán los reportes y, si no lo estaban ya, las gráficas "
+"correspondientes."
 msgstr ""
-"Upload the practice in a file .zip containing the correct folder structure "
-"corresponding to the package.\n"
-"  \t I.e.: If the package is 'uni.ubu', the structure of folders to upload "
-"would be: uni/ubu/nombrePractica.java.\n"
-"  \t After the rise, reports will be displayed and, if they were not "
-"already, the corresponding graphs."
+"Upload the practice in a .zip file containing the package structure for the "
+"correct folder. That is, if the package is 'uni.ubu', the folder structure "
+"up would be: uni/ubu/practiceName.java. After rising reports are displayed "
+"and, if not already, the corresponding charts."
 
-#: Template/Intentos/subir_practica.ctp:19
+#: Template/Intentos/subir_practica.ctp:18
 #: Template/Profesores/mostrar_parametros_lti.ctp:7
 #: Template/Profesores/registrar_profesor.ctp:7
 #: Template/Tareas/configurar_parametros_tarea.ctp:8
@@ -190,86 +187,90 @@ msgstr ""
 msgid "INFORMACIÓN"
 msgstr "INFORMATION"
 
-#: Template/Intentos/subir_practica.ctp:23
+#: Template/Intentos/subir_practica.ctp:22
 msgid "ENUNCIADO DE LA PRÁCTICA"
 msgstr "STATEMENT OF PRACTICE"
 
-#: Template/Intentos/subir_practica.ctp:35
+#: Template/Intentos/subir_practica.ctp:33;59
+msgid "Parámetros de la tarea"
+msgstr "Task parameters"
+
+#: Template/Intentos/subir_practica.ctp:33
+msgid "Ver"
+msgstr "View"
+
+#: Template/Intentos/subir_practica.ctp:36
 #: Template/Profesores/descargar_practicas_alumnos.ctp:33
 msgid "Comentarios"
 msgstr "Comments"
 
-#: Template/Intentos/subir_practica.ctp:36 Template/Tests/subir_test.ctp:19
+#: Template/Intentos/subir_practica.ctp:37 Template/Tests/subir_test.ctp:19
 msgid "Fichero a subir:"
 msgstr "File to upload:"
 
-#: Template/Intentos/subir_practica.ctp:40 Template/Tests/subir_test.ctp:23
+#: Template/Intentos/subir_practica.ctp:41 Template/Tests/subir_test.ctp:23
 msgid "Subir"
 msgstr "Upload"
 
-#: Template/Intentos/subir_practica.ctp:42
+#: Template/Intentos/subir_practica.ctp:43
 #: Template/Profesores/registrar_profesor.ctp:26
 #: Template/Tareas/configurar_parametros_tarea.ctp:28
 #: Template/Tests/subir_test.ctp:25
 msgid "Resetear campos"
 msgstr "Reset fields"
 
-#: Template/Intentos/subir_practica.ctp:58
-msgid "Parámetros de la tarea"
-msgstr "Task parameters"
-
-#: Template/Intentos/subir_practica.ctp:62
+#: Template/Intentos/subir_practica.ctp:63
 msgid "Nombre del paquete"
 msgstr "Package name"
 
-#: Template/Intentos/subir_practica.ctp:63
+#: Template/Intentos/subir_practica.ctp:64
 msgid "Número máximo de intentos posibles"
 msgstr "Maximum number of attemps"
 
-#: Template/Intentos/subir_practica.ctp:64
+#: Template/Intentos/subir_practica.ctp:65
 msgid "Fecha límite de entrega"
 msgstr "Delivery deadline"
 
-#: Template/Intentos/subir_practica.ctp:65
+#: Template/Intentos/subir_practica.ctp:66
 msgid "Número de intentos realizados"
 msgstr "Number of attemps realized"
 
-#: Template/Intentos/subir_practica.ctp:66
+#: Template/Intentos/subir_practica.ctp:67
 msgid "Número de intentos restantes"
 msgstr "Remaining number of attempts"
 
-#: Template/Intentos/subir_practica.ctp:70
+#: Template/Intentos/subir_practica.ctp:71
 msgid "Cerrar"
 msgstr "Close"
 
-#: Template/Intentos/subir_practica.ctp:86
+#: Template/Intentos/subir_practica.ctp:87
 msgid "Reportes del último intento realizado"
 msgstr "Reports last attemp"
 
-#: Template/Intentos/subir_practica.ctp:101
+#: Template/Intentos/subir_practica.ctp:102
 msgid "Gráficas disponibles"
 msgstr "Avaliable charts"
 
-#: Template/Intentos/subir_practica.ctp:103
+#: Template/Intentos/subir_practica.ctp:104
 #: Template/Profesores/generar_graficas.ctp:32;77
 msgid "Violaciones"
 msgstr "Violations"
 
-#: Template/Intentos/subir_practica.ctp:104
+#: Template/Intentos/subir_practica.ctp:105
 msgid "Errores"
 msgstr "Errors"
 
-#: Template/Intentos/subir_practica.ctp:106
+#: Template/Intentos/subir_practica.ctp:107
 msgid "Violaciones - Errores"
 msgstr "Violations - Errors"
 
-#: Template/Intentos/subir_practica.ctp:109
+#: Template/Intentos/subir_practica.ctp:110
 msgid "Violaciones - Prioridades"
 msgstr "Violations - Priority"
 
 #: Template/Layout/default.ctp:52
 msgid "TFG - Autocorrección prácticas en Java"
-msgstr "TFG - Autocorrect Java practices"
+msgstr "FP - Autocorrect Java practices"
 
 #: Template/Layout/default.ctp:58
 msgid "Panel Inicio"
@@ -282,7 +283,7 @@ msgstr "The statistics are not avaliable: no students has raised his practice"
 
 #: Template/Profesores/descargar_practicas_alumnos.ctp:19
 msgid "Estadísticas de las prácticas de los alumnos"
-msgstr "Practise statistics students"
+msgstr "Practices statistics students"
 
 #: Template/Profesores/descargar_practicas_alumnos.ctp:30
 #: Template/Profesores/registrar_profesor.ctp:16
@@ -304,6 +305,14 @@ msgstr "Upload date"
 #: Template/Profesores/descargar_practicas_alumnos.ctp:35
 msgid "Práctica"
 msgstr "Practice"
+
+#: Template/Profesores/descargar_practicas_alumnos.ctp:57
+msgid "sí"
+msgstr "yes"
+
+#: Template/Profesores/descargar_practicas_alumnos.ctp:57
+msgid "no"
+msgstr "no"
 
 #: Template/Profesores/descargar_practicas_alumnos.ctp:60
 msgid "COMENTARIOS DE LA PRÁCTICA"
@@ -352,7 +361,11 @@ msgstr "Realized Attempts"
 
 #: Template/Profesores/generar_graficas.ctp:42;83
 msgid "Alumnos test"
-msgstr "Test Students"
+msgstr "Students test"
+
+#: Template/Profesores/generar_graficas.ctp:48
+msgid "-- Selecciona el alumno --"
+msgstr "-- Select the student --"
 
 #: Template/Profesores/generar_graficas.ctp:48
 msgid "Mostrar gráficas alumno"
@@ -422,11 +435,11 @@ msgstr "LTI Parameters"
 #: Template/Profesores/mostrar_parametros_lti.ctp:6
 msgid ""
 "Utiliza estos parámetros para poder crear desde Moodle una tarea de tipo "
-"'herramienta externa'\n"
-"  que enlace con la aplicación web de Autocorrección de prácticas Java."
+"'herramienta externa' que enlace con la aplicación web de Autocorrección de "
+"prácticas Java."
 msgstr ""
-"Use this parameters to be able to créate external task from Moodle that "
-"links with web application "
+"Use this parameters to be able to create external task from Moodle that "
+"links with web application ."
 
 #: Template/Profesores/registrar_profesor.ctp:5
 msgid "Registro del profesor en la Aplicación"
@@ -434,12 +447,11 @@ msgstr "Registration application teacher "
 
 #: Template/Profesores/registrar_profesor.ctp:6
 msgid ""
-"Tras rellenar el formulario se mostrarán los parámetros LTI\n"
-"     necesarios para poder crear una tarea de Moodle que enlace con la "
-"aplicación web."
+"Tras el registro se le proporcionarán los parámetros LTI necesarios para "
+"poder crear una tarea de Moodle que enlace con la aplicación web."
 msgstr ""
-"After filling out the form it will be display necessary LTI parameters to "
-"créate a task of Moodle that links with the web application"
+"After registration it will be provide LTI neccesary parameters to be able to "
+"créate a task of Moodle that link with the web application."
 
 #: Template/Profesores/registrar_profesor.ctp:17
 msgid "Apellidos"
@@ -475,47 +487,47 @@ msgstr "Parameters task configuration"
 
 #: Template/Tareas/configurar_parametros_tarea.ctp:7
 msgid ""
-"El 'número máximo de intentos' debe de estar comprendido entre 1 y 20.\n"
-"     El 'paquete' únicamente podrá ser configurado la primera vez que el "
-"profesor accede a la aplicación web."
+"El 'número máximo de intentos' debe de estar comprendido entre 1 y 20. El "
+"'paquete' únicamente podrá ser configurado la primera vez que el profesor "
+"accede a la aplicación web."
 msgstr ""
-"The 'max number of attemps' must be between 1 and 20. \n"
-"The 'package' may only be configurated the first time that Teacher Access to "
-"web application."
+"The 'maximum number of attempts' must be between 1 and 20. The 'package' it "
+"may only be configured the first time the Instructor accesses the Web "
+"application."
 
 #: Template/Tareas/configurar_parametros_tarea.ctp:17
 msgid "Número máximo de intentos"
 msgstr "Maximum number of attemps"
 
 #: Template/Tareas/configurar_parametros_tarea.ctp:19;21
-msgid "paquete"
-msgstr "package"
+msgid "Paquete"
+msgstr "Package"
 
 #: Template/Tareas/configurar_parametros_tarea.ctp:19
 msgid "Separado por puntos en caso de ser varios"
 msgstr "Separated by points if several"
 
 #: Template/Tareas/configurar_parametros_tarea.ctp:22
-msgid "fecha_limite"
-msgstr "deadline"
+msgid "Fecha límite"
+msgstr "Deadline"
 
 #: Template/Tareas/configurar_parametros_tarea.ctp:26
 msgid "Guardar"
 msgstr "Save"
 
-#: Template/Tests/subir_test.ctp:6
-msgid "Subida de Test"
-msgstr "Test upload"
-
 #: Template/Tests/subir_test.ctp:7
+msgid "Subida de Test"
+msgstr "Upload Test"
+
+#: Template/Tests/subir_test.ctp:8
 msgid ""
 "Se deberá de subir un fichero .zip que contenga el test de extensión .java. "
-"Es importante que el test\n"
-"     pertenezca al paquete establecido en la configuración de parámetros de "
-"la tarea. Se podrá actualizar el enunciado aunque no se suban test."
+"Es importante que el test pertenezca al paquete establecido en la "
+"configuración de parámetros de la tarea. Se podrá actualizar el enunciado "
+"aunque no se suban test."
 msgstr ""
-"You musth upload a zip file that contains the test with java extensión. It "
-"is importat that the test belogs to the package. The statement can be "
+"You must upload a .zip file that contains the test with .java extensión. It "
+"is importat that the test belongs to the package. The statement can be "
 "updated."
 
 #: Template/Tests/subir_test.ctp:18
@@ -524,7 +536,7 @@ msgstr "Statement of practice"
 
 #: Template/Error/error400.ctp:33 Template/Error/error500.ctp:35
 msgid "Error"
-msgstr ""
+msgstr "Error"
 
 #: Template/Error/error400.ctp:35
 msgid "The requested address %s was not found on this server."
